# zero-nova

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  config.toml  error.html  rust-toolchain.toml  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.nova/: README.md  config.toml  config.toml.bak  openflux.yaml
.nova/examples/: agents.toml  skill-routing-samples.json  tool-unlock-samples.json  (+2 more)
configs/: config.toml
crates/channel-stdio/: Cargo.toml
crates/channel-websocket/: Cargo.toml
crates/channel-websocket/src/: lib.rs
crates/nova-agent/: Cargo.toml
crates/nova-agent/src/: agent.rs  agent_catalog.rs  config.rs  lib.rs  message.rs  path_resolver.rs  prompt.rs  skill.rs  tool.rs
crates/nova-agent/src/app/: agent_workspace_service.rs  application.rs  bootstrap.rs  conversation_service.rs  mod.rs  snapshot_assembler.rs  types.rs  voice_service.rs
crates/nova-agent/src/conversation/: cache.rs  control.rs  mod.rs  model.rs  repository.rs  service.rs  session.rs  sqlite_manager.rs
crates/nova-agent/src/facade/: agent_workspace_service.rs  application.rs  bootstrap.rs  conversation_service.rs  mod.rs
crates/nova-agent/src/mcp/: types.rs
crates/nova-agent/src/provider/: anthropic.rs  mod.rs  openai_compat.rs
crates/nova-agent/src/tool/builtin/: agent.rs  bash.rs  mod.rs  skill.rs  task.rs  tool_search.rs  web_fetch.rs
crates/nova-agent/src/tool/builtin/web_search/: mod.rs  types.rs
crates/nova-agent/src/voice/: mock.rs  mod.rs  openai_compat.rs
crates/nova-agent/tests/: bootstrap_paths.rs
crates/nova-agent/tests/integration/: mock_client.rs  mod.rs  project_dir.rs
crates/nova-app/: Cargo.toml
crates/nova-app/src/: agent_workspace_service.rs  application.rs  bootstrap.rs  conversation_service.rs  lib.rs  snapshot_assembler.rs  types.rs
crates/nova-app/tests/: bootstrap_paths.rs
crates/nova-cli/: Cargo.toml
crates/nova-cli/src/: main.rs
crates/nova-conversation/: Cargo.toml
crates/nova-conversation/src/: control.rs  lib.rs  repository.rs  service.rs  session.rs  sqlite_manager.rs
crates/nova-gateway-core/: Cargo.toml
crates/nova-gateway-core/src/: bridge.rs  lib.rs  router.rs  transport.rs
crates/nova-gateway-core/src/handlers/: agents.rs  chat.rs  config.rs  mod.rs  sessions.rs  system.rs  voice.rs
crates/nova-protocol/: Cargo.toml
crates/nova-protocol/src/: agent.rs  chat.rs  envelope.rs  lib.rs  observability.rs  schema.rs  session.rs  system.rs  voice.rs
crates/nova-protocol/src/schema/: generate.rs
crates/nova-protocol/tests/: contract.rs
crates/nova-protocol/tests/fixtures/: invalid_chat_missing_input.json  skill_activated.json  welcome.json
crates/nova-server/: Cargo.toml
crates/nova-server-stdio/: Cargo.toml
crates/nova-server-stdio/src/: lib.rs
crates/nova-server/src/: lib.rs
crates/nova-server/src/transport/: core.rs  mod.rs  stdio.rs  ws.rs
deskapp/: README.md  README_zh.md  config.toml  index.html  openflux.yaml  package-lock.json  package.json  pnpm-lock.yaml  server-config.json  settings_view_content.html  user_agents.json  vite.config.ts
deskapp/src-tauri/: Cargo.toml  config-bak.toml  tauri.conf.json  tauri.macos.conf.json
deskapp/src-tauri/capabilities/: default.json
deskapp/src-tauri/icons/: icon.icns
deskapp/src-tauri/nsis/: hooks.nsh  installer.nsi
deskapp/src-tauri/src/: config.rs  lib.rs  main.rs  tray.rs
deskapp/src-tauri/src/commands/: file.rs  gateway.rs  mod.rs  sidecar.rs  system.rs  window.rs
doc/: PLUGIN_USAGE.md  capability_assessment_recommendation.md  tool_use_handling_fix.md  tts.md
docs/: 2026-04-21-hotkey-passthrough-design.md  2026-04-21-skill-creator-timeout-debug.md  2026-04-21-test-standardization-and-deployment.md  2026-04-22-gateway-websocket-refactor-design.md  2026-04-22-gateway-websocket-refactor-phase-1-protocol-convergence.md  2026-04-22-gateway-websocket-refactor-phase-4-bootstrap-and-finalization.md  2026-04-22-remove-unimplemented-gateway-features.md  2026-04-23-crate-split-design.md  2026-04-23-gateway-simplification-plan.md  2026-04-24-tool-skill-capability-enhancement-plan-1.md  2026-04-24-tool-skill-capability-enhancement-plan-2.md  2026-04-24-tool-skill-capability-enhancement-plan-3.md  2026-04-24-tool-skill-capability-enhancement-plan-4.md  2026-04-24-tool-skill-capability-enhancement.md  2026-04-25-core-crate-audit-fix.md  2026-04-25-next-stage-enhancements.md  2026-04-25-prompt-architecture-enhancement.md  2026-04-26-crate-consolidation-plan-1.md  2026-04-26-crate-consolidation-plan-2.md  2026-04-26-crate-consolidation-plan-3.md  2026-04-26-crate-consolidation-plan-4.md  2026-04-26-crate-consolidation.md  2026-04-26-deskapp-agent-observability-and-control-backlog.md  2026-04-26-deskapp-agent-observability-and-control-implementation-review.md  2026-04-26-deskapp-agent-observability-and-control-plan-1.md  2026-04-26-deskapp-agent-observability-and-control-plan-2.md  2026-04-26-deskapp-agent-observability-and-control-plan-3.md  2026-04-26-deskapp-agent-observability-and-control-plan-4.md  2026-04-26-deskapp-agent-observability-and-control-plan-5.md  2026-04-26-deskapp-agent-observability-and-control-plan-6.md  2026-04-26-deskapp-agent-observability-and-control.md  2026-04-26-prompt-architecture-implementation-review.md  2026-04-27-observability-memory-fix.md  PROTOCOL_DESIGN.md  agent_enhancement_design.md  gateway-protocol-implementation.md  gateway-protocol.md  phase-2-function-enhancement.md  phase-3-architecture-optimization.md  web_search_flow.md  (+1 more)
docx/: 2025-05-22-tech-solution-architect.md  2026-04-20-force-action-execution.md  2026-04-20-session-cloning-design.md  2026-04-20-skill-system-integration.md  2026-04-21-tech-research-deployer.md
prompts/: default.md
schemas/: domains_snapshot.txt  registry.json
scripts/: README.md  diagnose_evals.py  download_agents.bat  download_agents.sh  execute_with_nova.py  smoke_test_nova_cli.py  test_json_structure.py  validate_trigger.py
src/: agent.rs  config.rs  event.rs  lib.rs  main.rs  message.rs  prompt.rs  skill.rs  tool.rs
(+599 files in other folders)
