[package]
name = "zero-nova"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["__rustls-tls"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
custom-utils = { version = "0.10.21", features = ["daemon-async", "prod"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.74"
scraper = "0.19"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"], optional = true }
toml = "0.8"
sysinfo = "0.30"



# Optional dependencies for CLI
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "15", optional = true }
chrono = { version = "0.4", optional = true }
colored = { version = "3", optional = true }
which = "8.0.2"


[features]
gateway = ["uuid"]
cli = ["clap", "rustyline", "chrono", "colored"]
default = ["cli", "gateway"]
prod = ["custom-utils/prod"]

[[bin]]
name = "nova_gateway"
path = "src/bin/nova_gateway.rs"
required-features = ["gateway", "cli"]
