[workspace]
members = [".", "deskapp/src-tauri", "crates/channel-websocket"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["__rustls-tls"] }
log = "0.4"
custom-utils = { version = "0.11", features = ["daemon-async", "prod"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.74"
scraper = "0.19"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
toml = "0.8"
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }
rustyline = { version = "15" }
chrono = { version = "0.4" }
colored = { version = "3" }
which = "8.0.2"

[package]
name = "zero-nova"
version = "0.2.0"
edition = "2021"

[dependencies]
channel-websocket = { path = "crates/channel-websocket" }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
custom-utils = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
scraper = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true, optional = true }
sqlx = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
which = { workspace = true }

# Optional dependencies for CLI
clap = { workspace = true, optional = true }
rustyline = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
colored = { workspace = true, optional = true }

[features]
gateway = ["uuid"]
cli = ["clap", "rustyline", "chrono", "colored"]
default = ["cli", "gateway"]
prod = ["custom-utils/prod"]

[[bin]]
name = "nova_gateway"
path = "src/bin/nova_gateway.rs"
required-features = ["gateway"]
