[workspace]
resolver = "2"
members = [
  "crates/nova-agent",
  "crates/nova-conversation",
  "crates/nova-app",
  "crates/nova-protocol",
  "crates/channel-core",
  "crates/channel-websocket",
  "crates/channel-stdio",
  "crates/nova-gateway-core",
  "crates/nova-server-ws",
  "crates/nova-server-stdio",
  "crates/nova-cli",
  "deskapp/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["__rustls-tls"] }
log = "0.4"
custom-utils = { version = "0.11", features = ["daemon-async", "prod"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.74"
scraper = "0.19"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
toml = "0.8"
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }
rustyline = { version = "15" }
chrono = { version = "0.4", features = ["serde"] }
colored = { version = "3" }
which = "8.0.2"
once_cell = "1"
regex = "1"
tempfile = "3"

# Internal crates
nova-agent = { path = "crates/nova-agent" }
nova-conversation = { path = "crates/nova-conversation" }
nova-app = { path = "crates/nova-app" }
nova-protocol = { path = "crates/nova-protocol" }
channel-core = { path = "crates/channel-core" }
channel-websocket = { path = "crates/channel-websocket" }
channel-stdio = { path = "crates/channel-stdio" }
nova-gateway-core = { path = "crates/nova-gateway-core" }
nova-server-ws = { path = "crates/nova-server-ws" }
nova-server-stdio = { path = "crates/nova-server-stdio" }
nova-cli = { path = "crates/nova-cli" }
