[package]
name = "channel-stdio"
version = "0.1.0"
edition = "2021"
description = "NDJSON over stdin/stdout for zero-nova"

[dependencies]
channel-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
