[package]
name = "nova-app"
version = "0.1.0"
edition = "2021"
description = "Application门面 for zero-nova"

[dependencies]
nova-core = { workspace = true }
nova-conversation = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
