[package]
name = "nova-conversation"
version = "0.1.0"
edition = "2021"
description = "Conversation management for zero-nova"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio"] }
chrono = { workspace = true }
uuid = { workspace = true }
nova-agent = { workspace = true }
