[package]
name = "nova-gateway-core"
version = "0.1.0"
edition = "2021"
description = "Gateway core for zero-nova"

[dependencies]
nova-protocol = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
nova-agent = { workspace = true }
