[package]
name = "nova-protocol"
version = "0.1.0"
edition = "2021"
description = "JSON protocol DTOs for zero-nova gateway"

[features]
default = []
export-schema = []

[[bin]]
name = "export-schema"
path = "src/bin/export-schema.rs"
required-features = ["export-schema"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
