[package]
name = "nova-server"
version = "0.1.0"
edition = "2021"
description = "Unified server for zero-nova"

[dependencies]
nova-agent = { workspace = true }
nova-protocol = { workspace = true }
channel-core = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
custom-utils = { workspace = true }
nova-gateway-core = { workspace = true }

[features]
default = ["cli"]
cli = ["clap", "sysinfo"]
prod = []

[[bin]]
name = "nova_gateway_stdio"
path = "src/bin/nova_gateway_stdio.rs"

[[bin]]
name = "nova-server-ws"
path = "src/bin/nova_gateway_ws.rs"
