[package]
name = "nova-server-ws"
version = "0.1.0"
edition = "2021"
description = "WebSocket server for zero-nova"

[dependencies]
nova-core = { workspace = true }
nova-conversation = { workspace = true }
nova-app = { workspace = true }
nova-protocol = { workspace = true }
nova-gateway-core = { workspace = true }
channel-core = { workspace = true }
channel-websocket = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
custom-utils = { workspace = true }

[features]
default = ["cli"]
cli = ["clap", "sysinfo"]
prod = []

[[bin]]
name = "nova-server-ws"
path = "src/bin/nova_gateway_ws.rs"
