[package]
name = "openflux-rust"
version = "0.5.2"
description = "OpenFlux - AI Agent Desktop Application"
authors = ["OpenFlux Team"]
edition = "2021"

[lib]
name = "openflux_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros", "time"] }
open = "5"
log = "0.4"
tar = "0.4"
flate2 = "1"
toml = "0.8"
custom-utils = "0.11.3"
anyhow = "1.0.102"
