[package]
name = "openflux-rust"
version = "0.5.2"
description = "OpenFlux - AI Agent Desktop Application"
authors = ["OpenFlux Team"]
edition = "2021"

[lib]
name = "openflux_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
open = "5"
log = { workspace = true }
tar = "0.4"
flate2 = "1"
toml = { workspace = true }
custom-utils = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
